<resources>
    <string name="hint_nome">Alterar nome</string>
    <string name="hint_descricao">Alterar descrição</string>
    <string name="hint_horario">Alterar horário</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_criar_medicamento">Criar Medicamento</string>
    <string name="btn_editar_medicamento">Editar Medicamento</string>
    <string name="btn_excluir_medicamento">Excluir Medicamento</string>
    <string name="btn_editar_tomado">Editar Tomado</string>
    <string name="hint_alterar_nome">Alterar nome</string>
    <string name="hint_alterar_descricao">Alterar descrição</string>
    <string name="hint_alterar_horario">Alterar horário (HH:mm)</string>
</resources>
